[project]
name = "vball-net"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "absl-py==2.1.0",
    "astunparse==1.6.3",
    "cachetools==5.5.0",
    "certifi==2024.7.4",
    "contourpy==1.3.0",
    "cycler==0.12.1",
    "decord>=0.6.0",
    "flatbuffers==24.3.25",
    "fonttools==4.53.1",
    "gast==0.6.0",
    "google-auth==2.34.0",
    "google-auth-oauthlib==1.2.1",
    "google-pasta==0.2.0",
    "grpcio==1.66.0",
    "h5py==3.11.0",
    "importlib-resources==6.4.5",
    "ipython>=9.3.0",
    "joblib==1.4.2",
    "keras==3.5.0",
    "kiwisolver==1.4.7",
    "libclang==18.1.1",
    "markdown==3.7",
    "markupsafe==2.1.5",
    "matplotlib==3.9.2",
    "memory-profiler>=0.61.0",
    "ml-dtypes==0.4.0",
    "namex==0.0.8",
    "numpy==1.26.4",
    "nvidia-cublas-cu12==12.3.4.1",
    "nvidia-cuda-cupti-cu12==12.3.101",
    "nvidia-cuda-nvcc-cu12==12.3.107",
    "nvidia-cuda-nvrtc-cu12==12.3.107",
    "nvidia-cuda-runtime-cu12==12.3.101",
    "nvidia-cudnn-cu12==8.9.7.29",
    "nvidia-cufft-cu12==11.0.12.1",
    "nvidia-curand-cu12==10.3.4.107",
    "nvidia-cusolver-cu12==11.5.4.101",
    "nvidia-cusparse-cu12==12.2.0.103",
    "nvidia-nccl-cu12==2.19.3",
    "nvidia-nvjitlink-cu12==12.3.101",
    "oauthlib==3.2.2",
    "onnx==1.17",
    "onnxruntime>=1.22.0",
    "opencv-python==4.10.0.84",
    "opt-einsum==3.3.0",
    "optree==0.12.1",
    "pandas==2.2.2",
    "pillow==10.4.0",
    "protobuf==4.25.4",
    "psutil>=7.0.0",
    "pyasn1==0.6.0",
    "pyasn1-modules==0.4.0",
    "pykalman>=0.10.1",
    "pyparsing==3.1.4",
    "pyqt6>=6.9.1",
    "requests==2.32.3",
    "requests-oauthlib==2.0.0",
    "rich==13.7.1",
    "rsa==4.9",
    "scikit-learn==1.5.1",
    "scipy==1.13.1",
    "six==1.16.0",
    "tensorboard==2.17.1",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.17.1",
    "tensorflow-estimator==2.15.0",
    "tensorflow-io-gcs-filesystem==0.37.1",
    "tensorflowjs>=4.22.0",
    "termcolor==2.4.0",
    "tflite-runtime>=2.14.0",
    "threadpoolctl==3.5.0",
    "tqdm>=4.67.1",
    "typing-extensions==4.12.2",
    "urllib3==2.2.2",
    "werkzeug==3.0.4",
    "wrapt==1.14.1",
    "zipp==3.20.0",
]


